[project]
name = "cimba-dd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.2",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "sentence-transformers>=5.4.1",
    "snowflake-connector-python>=4.4.0",
]
